try adding chips

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <script src="lib/backbone.js"></script>
 
     <script src="compiled/models/Card.js"></script>
+    <script src="compiled/models/Chip.js"></script>
     <script src="compiled/collections/Hand.js"></script>
     <script src="compiled/collections/Deck.js"></script>
+    <script src="compiled/collections/ChipsCollection.js"></script>
+    <script src="compiled/collections/CollectionBox.js"></script>
     <script src="compiled/models/App.js"></script>
 
     <script src="compiled/views/CardView.js"></script>
     <script src="compiled/views/HandView.js"></script>
+    <script src="compiled/views/ChipsView.js"></script>
     <script src="compiled/views/AppView.js"></script>
 
     <script src="compiled/main.js"></script>
